# gmpp

./: CMakeLists.txt
include/gmpp/: integer.hpp
src/: Integer.cxx
tests/: CMakeLists.txt  tests_integer_operations.cxx
